--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,12 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "styled-components": "^5.0.1"
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.0.1",
+    "uuid": "^7.0.1"
   },
   "scripts": {
     "start": "webpack-dev-server --mode development",
